view community mission timeline

--- a/src/assets/lang/language.cs.json
+++ b/src/assets/lang/language.cs.json
@@ -79,7 +79,7 @@
   "buildings": "Konstrukční díly",
   "blueprintFrom": "Plán získán",
   "unknown": "Neznámý",
-  "manufacturingFacility": "Manufacturing Facility",
+  "manufacturingFacility": "Hádanky a odměny výrobního zařízení",
   "manufacturingFacilityOrPolo": "Manufacturing Facility nebo Polo ve vesmírné anomálii",
   "portalLibrary": "Knihovna portálů",
   "savedPortalCoordinates": "Uložené koordinace portálů",
@@ -108,7 +108,7 @@
   "searchOptions": "Možnosti vyhledávání",
   "searchResults": "Výsledky vyhledávání",
   "updateAvailable": "Nový dostupný update",
-  "googlePlay": "Google Play",
+  "googlePlay": "Google play",
   "appStore": "App Store",
   "blueprintCost": "Cena plánu",
   "cookingValue": "Hodnota vaření",
@@ -239,7 +239,7 @@
   "day": "{0} den",
   "timerComplete": "Časovač dokončen",
   "termsAndConditions": "Pravidla a podmínky",
-  "legal": "Legal",
+  "legal": "Legální",
   "more": "Další",
   "galacticAtlas": "Galaktický Atlas",
   "legalNotice": "Tato aplikace není přidružena k Hello Games nebo společnosti No Man's Sky, jejím dceřiným společnostem nebo jejím mateřským společnostem, jejichž jména, loga a produkty jsou v této aplikaci zobrazeny.",
@@ -252,7 +252,7 @@
   "emailBackupLink": "Pokud to nefunguje, zkopírujte a vložte do prohlížeče následující odkaz:",
   "anyQuestionsReplyToThisEmail": "Pokud máte nějaké dotazy, napište na tento e-mail. Vždy vám rádi pomůžeme.",
   "emailSignOff": "S pozdravem,",
-  "emailSignOffTeam": "AssistantNMS Team",
+  "emailSignOffTeam": "Asistenti NMS týmu",
   "needMoreHelp": "Potřebujete další pomoc?",
   "weAreHereToHelp": "Jsme tu, abychom vám pomohli",
   "friendCodes": "Friend kódy",
@@ -264,7 +264,7 @@
   "solarPanelBatteryCalculator": "Kalkulátor nabití baterií",
   "storeDescription": "Rychle a snadno zjistíte, jak zpracovávat nebo vylepšovat předměty v No Man's Sky",
   "storeFullDescription": "Už nemusíte procházet nabídkami v No Man's Sky, abyste viděli, jak je položka vytvořena, nebo hádat, jak vylepšit zdroj. Tato aplikace bude vaším společníkem se všemi recepty, které potřebujete.\n\nRoadmap: https://trello.com/b/zbnaIiVF/public\n\nDiscord: https://discord.gg/q3aFBQM\n\n- Vše je offline\n- Všechny recepty\n- Naplánujte si, co potřebujete natěžit\n- Rychlé uživatelské rozhraní\n- Podpora více jazyků (pomoc vítána)\n- Vše je zdarma\n- Částečně Open Source \n\nPřispěvatelé uvedení na seznamu https://nmsassistant.com",
-  "viewOriginalWorkOnJsFiddle": "View original work on jsfiddle.net",
+  "viewOriginalWorkOnJsFiddle": "Zobrazit originální práci na jsfiddle.net",
   "totalPowerConsumption": "Celková spotřeba energie v kPs",
   "minimum": "Minimum",
   "solarPanelsProduceMoreThanBatteries": "{0} Solární Panely budou produkovat více energie než {1} můžou Baterie uložit!",
@@ -273,8 +273,8 @@
   "totalSolarProduced": "Celkově vyprodukované solární energie",
   "minimumSummary": "Minimální množství",
   "recommendedSummary": "Doporučené množství ",
-  "basedOnWorstCase": "Based on worst case scenario where the sun passes directly overhead.",
-  "bestCaseScenarioLocation": "The best case would be a location on the planet furthest away from the sun. This -sadly enough- usually does not match planet pole coordinates. It will then however always be sunrise/sunset, with solar panels running at 50% (25kPs) all day long (24h in-game / 1800s real-time). No batteries would be required in that case.",
+  "basedOnWorstCase": "Založeno na nejhorším scénáři, kdy slunce prochází přímo nad hlavou",
+  "bestCaseScenarioLocation": "Nejlepším případem by bylo umístění na planetě nejdále od Slunce. To - bohužel - obvykle neodpovídá souřadnicím pólů planety. Pak to však bude vždy východ/západ slunce se solárními panely běžícími na 50 % (25 kPs) po celý den (24 hodin ve hře / 1800 s v reálném čase). V takovém případě nebudou potřeba žádné baterie.",
   "recommended": "Doporučený",
   "info": "Info",
   "sunrise": "Svítání",
@@ -290,126 +290,130 @@
   "daytime": "Den",
   "flatList": "List",
   "tree": "Strom",
-  "onlineMeetup2020": "Online Meetup 2020",
+  "onlineMeetup2020": "Online setkání 2020",
   "patrons": "Patroni",
   "weekendMission": "Víkendové mise",
   "joinPatreon": "Přidat se k Patreon",
   "requiresTheFollowing": "Potřebuje:",
   "itemsRequiredConfirmedBy": "Potřebné předměty, potvrzeno",
   "readConversation": "Přečíst konverzaci ",
-  "spoilerAlert": "Spoiler Alert",
+  "spoilerAlert": "Upozornění na spoilery",
   "spoilersAhead": "Chystáte se podívat na možné spoilery",
   "conversationEnded": "Konverzace skončila ",
   "prevCommunityMission": "Odměny za komunitní misi",
-  "weekendMissionVideo": "Weekend Mission video",
+  "weekendMissionVideo": "Video víkendové mise",
   "nextWeekendMission": "Další víkendová mise",
   "previousWeekendMission": "Předchozí víkendová mise",
   "homepage": "Domovská stránka",
-  "defaultHomepage": "Default Home Page",
-  "customHomepage": "Custom Home Page",
-  "hideSpoilerWarnings": "Hide Spoiler warnings",
-  "failedLatestDisplayingOld": "Failed to fetch latest, curently displaying old data",
+  "defaultHomepage": "Základní domovská stránka",
+  "customHomepage": "Vlastní domovská stránka",
+  "hideSpoilerWarnings": "Skrýt varování spoileru",
+  "failedLatestDisplayingOld": "Nepodařilo se načíst nejnovější, aktuálně se zobrazují stará data",
   "planetAddress": "Adresa planety",
   "portalAddress": "Adresa portálu",
   "rechargeThisUsing": "Tento předmět nabiješ:",
   "useXToRecharge": "{0} k přebití",
-  "communitySpotlight": "Community Spotlight",
+  "communitySpotlight": "Zaostřeno na komunitu",
   "titles": "Nadpisky",
   "owned": "Vlastněno",
   "notOwned": "Nevlastněno",
   "playerName": "Jméno hráče",
   "release": "Aktualizace",
-  "pendingAppStoreRelease": "Pending App Store approval",
-  "alienPuzzleFormat": "{0} {1} {2}",
+  "pendingAppStoreRelease": "Čeká na schválení App Store",
+  "alienPuzzleFormat": "{0} představuje mimozemskou rasu. {1} představuje typ zařízení. {2} je pozice čísla zařízení.",
   "featureNotAvailable": "Vlastnost není přístupná",
-  "featureNotAvailableDescrip": "This feature will be unlocked in {0}. Patrons get early access to these features. Please consider supporting!",
-  "manufacturingPuzzles": "Manufacturing Puzzles",
-  "appVersion": "App Version: {0}",
+  "featureNotAvailableDescrip": "Tato funkce bude odemčena za {0}. Patroni mají k těmto funkcím včasný přístup. Prosím zvažte podporu!",
+  "manufacturingPuzzles": "Výrobní puzzle",
+  "appVersion": "Verze aplikace: {0}",
   "gameVersion": "Verze aplikace",
-  "patreonAccess": "Patreon Access",
+  "patreonAccess": "Přístup patreonům",
   "unableToLogInToGoogleAccount": "Není možné se v tuto chvíli připojit k google účtu",
-  "pleaseAddContainer": "Please add Container",
-  "likeNotSubmitted": "Your 'like' was not submitted",
-  "manufacturingFacilityRewards": "Manufacturing Facility Rewards",
-  "creditToYakuzaSuskeForCreatingHDImage": "Credit to Yakuza_Suske for creating HD versions of all the game item icons",
-  "learnNewWord": "Learn new word",
-  "factionStanding": "{0} standing {1}",
+  "pleaseAddContainer": "Přidejte kontejner",
+  "likeNotSubmitted": "Vaše 'To se mi líbí' nebylo odesláno",
+  "manufacturingFacilityRewards": "Odměny za výrobní zařízení",
+  "creditToYakuzaSuskeForCreatingHDImage": "Poděkování Yakuza_Suskemu za vytvoření HD verzí všech ikon herních položek",
+  "learnNewWord": "Naučení nových slov",
+  "factionStanding": "To platí pro případ, že jste odměněni postavením z výrobního závodu, {0} je nahrazeno názvem frakce a {1} je nahrazeno +1 nebo -1, např. Postoj Geku +1",
   "blueprint": "Plánek",
   "viewPossibleRewards": "Zobrazit možné odměny ",
   "noRewards": "Žádné odměny",
   "changeChoice": "Změnit volbu",
-  "unlockItemsUsingTheFactoryOverrideUnit": "Unlock the following items using the Factory Override Unit",
-  "assistantApps": "AssistantApps",
-  "displaySeasonalBackground": "Display Seasonal Background",
-  "japanese": "Japanese",
-  "enabled": "Enabled",
+  "unlockItemsUsingTheFactoryOverrideUnit": "Pomocí jednotky Factory Override Unit odemkněte následující položky",
+  "assistantApps": "Asistenční aplikace",
+  "displaySeasonalBackground": "Zobrazit sezónní pozadí",
+  "japanese": "Japonština",
+  "enabled": "Povoleno",
   "percentage": "{0}%",
-  "lightYear": "{0} ly",
+  "lightYear": "{0} světelných let",
   "meter": "{0} m",
-  "proceduralStats": "Stats (Min: {0}, Max: {1})",
-  "stats": "Stats",
-  "statAlwaysIncluded": "Always included",
-  "statPossible": "Possible",
-  "translationPercentageComplete": "Translation per Language",
-  "useTranslationTool": "Use Translation Tool",
-  "norwegian": "Norwegian",
-  "nmsfm": "NMSFM",
-  "steamNews": "Steam News",
-  "steamBranches": "Steam Branches",
-  "nmsfmSubtitle": "Music for Travelers by Travelers",
-  "nmsNews": "No Man's Sky News",
-  "nmsNewsExplanation": "The first News page contains articles posted on the No Man's Sky website on their News page, these items are less frequent than the Release Notes. \n\nThe Release Notes page contains the patch notes that Hello Games writes and publishes to the Release Notes page on the No Man's Sky website. These Release Notes are usually platform specific.\n\nThe Steam Branches page contains a list of the different branches that No Man's Sky has on Steam. The Public branch is the version of the game that everyone can play. The Experimental branch contains game files that only people who have signed up to the NMS beta can access and the Internal branch is for Hello Games staff only. When updates come to No Man's Sky, they usually get moved to Internal, then Experimental and finally to the Public branch.\n\nThe Steam News page contains the collection of posts that Hello Games has made on the Steam News section, usually updated less frequently than the News page on the No Man's Sky homepage\n",
-  "tapToExpand": "Tap to expand",
-  "oneResource": "One resource",
-  "oneBlueprint": "One blueprint",
-  "gek": "Gek",
-  "vykeen": "Vy'keen",
-  "korvax": "Korvax",
-  "manufacturingFacilityFactory": "{0} Factory {1}",
-  "manufacturingFacilityHarvestor": "{0} Harvestor {1}",
+  "proceduralStats": "Statistiky (min.: {0}, max.: {1})",
+  "stats": "Staty",
+  "statAlwaysIncluded": "Vždy v ceně",
+  "statPossible": "Možné",
+  "translationPercentageComplete": "Přeložení pro jazyk",
+  "useTranslationTool": "Použít překlad",
+  "norwegian": "Norsko",
+  "nmsfm": "Fanoušky vytvořené rádio",
+  "steamNews": "Novinky steamu",
+  "nmsfmSubtitle": "Hudba pro cestovatele od Cestovatele",
+  "steamBranches": "Steam větve",
+  "nmsNews": "No Man's Sky novinky",
+  "nmsNewsExplanation": "První stránka Novinky obsahuje články zveřejněné na webu No Man's Sky na jejich stránce Novinky, tyto položky jsou méně časté než Poznámky k vydání. Stránka Release Notes obsahuje poznámky k opravám, které Hello Games píše a publikuje na stránce Release Notes na webu No Man's Sky. Tyto poznámky k verzi jsou obvykle specifické pro platformu. Stránka Steam Branches obsahuje seznam různých větví, které má No Man's Sky na Steamu. Veřejná větev je verze hry, kterou může hrát každý. Experimentální větev obsahuje herní soubory, ke kterým mají přístup pouze lidé, kteří se zaregistrovali do NMS beta, a interní větev je určena pouze pro zaměstnance Hello Games. Když aktualizace přijdou do No Man's Sky, obvykle se přesunou do interní, pak experimentální a nakonec do veřejné pobočky. Stránka Steam News obsahuje sbírku příspěvků, které Hello Games zveřejnily v sekci Steam News, obvykle aktualizované méně často než stránka News na domovské stránce No Man's Sky.",
+  "tapToExpand": "Klikni pro roztahnuti",
+  "oneResource": "Jeden zdroj",
+  "oneBlueprint": "Jeden plán",
+  "gek": "Gekové",
+  "vykeen": "Vy'keenové",
+  "korvax": "Korvaxové",
+  "manufacturingFacilityFactory": "{0} Továrna {1}",
+  "manufacturingFacilityHarvestor": "{0} sklízeč {1}",
   "eggModification": "Modifikace Vejce",
   "eggModificationHelpfulness": "Užitečnost",
   "eggModificationAggression": "Agrese",
   "eggModificationIndependence": "Nezávislost",
   "eggModificationNeuralCalibrator": "Neurální kalibrovač",
   "secondsAbbrev": "{0}s",
-  "minutesAbbrev": "{0}m",
-  "minutesSecondsAbbrev": "{0}m {1}s",
-  "viewTrackList": "View list of tracks",
-  "nmsfmCreator": "NMSFM creator",
-  "seasonalExpedition": "Expedition Milestones",
+  "minutesAbbrev": "{0}min",
+  "minutesSecondsAbbrev": "{0}min {1}sek",
+  "viewTrackList": "Zobrazit seznam skladeb",
+  "nmsfmCreator": "NMSFM tvoritelé",
+  "seasonalExpedition": "Milníky expedice",
   "rewards": "Odměny",
-  "walkthroughPlaylistExpeditionsSeasonNum": "Walkthrough Playlist: Expeditions Season {0}",
-  "viewUnusedMilestonePatches": "View unused Milestone Patches",
-  "unusedMilestonePatches": "Unused Milestone Patches",
-  "markAsClaimed": "Mark as claimed",
+  "walkthroughPlaylistExpeditionsSeasonNum": "Seznam videí: Expedice, sezóna {0}",
+  "viewUnusedMilestonePatches": "Zobrazit nepoužité opravy Milníku",
+  "unusedMilestonePatches": "Nepoužité záplaty Milníku",
+  "markAsClaimed": "Označit jako vybraný",
   "markAsNotClaimed": "Označit jako nevyzvednuté",
-  "communityMissionMismatchTitle": "The rewards for the current Community Mission seems to be incorrect.",
-  "communityMissionMismatchMessage": "This can happen when No Man's Sky is updated and the Community Mission order is changed. Please wait for the next update of the app (usually every Friday) for a fix to the display of game items",
-  "seasonalExpeditionSeasons": "Expedition Seasons",
-  "puzzles": "Puzzles",
-  "observatory": "Observatory",
-  "abandonedBuilding": "Abandoned Building",
-  "monolith": "Monolith",
-  "plaque": "Plaque",
-  "transmissionTower": "Transmission Tower",
-  "stationCore": "Station Core",
+  "communityMissionMismatchTitle": "Zdá se, že odměny za současnou komunitní misi jsou nesprávné.",
+  "communityMissionMismatchMessage": "To se může stát, když se aktualizuje No Man's Sky a změní se pořadí komunitních misí. Počkejte prosím na další aktualizaci aplikace (obvykle každý pátek), aby se opravilo zobrazování herních položek",
+  "seasonalExpeditionSeasons": "Expediční sezóny",
+  "puzzles": "Puzzle",
+  "observatory": "Observatoř",
+  "abandonedBuilding": "Opuštěná budova",
+  "monolith": "Monolit",
+  "plaque": "Nákaza",
+  "transmissionTower": "Přenosová věž",
+  "stationCore": "Jádro stanice",
   "atlas": "Atlas",
-  "playerTakeDamage": "Suit takes some damage",
-  "playerHealthRestored": "Health Restored",
+  "playerTakeDamage": "Oblek utrpí nějaké poškození",
+  "playerHealthRestored": "Doplnění života",
   "rewardMinMax": "Min: {0}, Max: {1}",
-  "playerShieldRestored": "Shield Restored",
-  "playerScanReward": "Scan for nearby structures",
-  "playerDamagedTechReward": "Technology takes some damage",
-  "journeyMilestone": "Journey Milestones",
-  "nmsThemed": "NMS themed",
-  "defaultFont": "Default Font",
+  "playerShieldRestored": "Doplnění štítu",
+  "playerScanReward": "Skenovat po blízkých budovách",
+  "playerDamagedTechReward": "Technologie utrpí nějaké poškození ",
+  "journeyMilestone": "Cestovní milník",
+  "nmsThemed": "NMS téma",
+  "defaultFont": "Základní font",
   "settingsFont": "Font",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
+  "arabic": "Arabština",
+  "vietnamese": "Vietnamština",
   "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "B88F56C264E6621808A8E5A3E9C94BB2"
+  "filipino": "Filipínština",
+  "malaysian": "Malajština",
+  "tagalog": "Togalog",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "DAFF31772A9662770B7417EC18D140EA"
 }
