--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -29,13 +29,13 @@
   "about": "Acerca de",
   "aboutContent": "¿Por qué me he molestado en hacer esta app? Un día estaba jugando a No Man's Sky y quería planear qué recursos farmeables debería tener en una nueva base, y pensé que sería más fácil descargar una app de la Play/App Store que mirar la wiki en mi segundo monitor. Encontré una app y me topé con una paywall cuando intenté mirar las recetas de objetos fabricados, así que, molesto, decidí hacer una app gratuita que pudiese usar todo el mundo. Fue taambién una gran excusa para trastear con el desarrollo de apps a través de Flutter.\n\nP.D. También tengo un blog, Inside my Mind - por Kurt Lourens. No lo he estado usando tanto como hubiese podido, pero tengo algún que otro artículo 😋.\n\nEsta aplicación no está afiliada con Hello Games, No Man's Sky, sus subsidiarias o sus empresas matrices cuyos nombres, logos y productos aparecen en esta app.",
   "language": "Ayuda con idiomas",
-  "languageContent": "Necesito ayuda traduciendo esta app a varios idiomas. Sólo sé inglés y afrikaans y un poco de francés. Si estás dispuesto a ayudarme por favor házmelo saber. Iré poniendo los nombres de aquellos que contribuyan y quieran reconocimiento en la web 😁\n",
+  "languageContent": "Lenguage del contenido\n",
   "email": "Ofrecer ayuda",
   "github": "Ir a Github",
   "kurtsBlog": " Blog de Kurt",
   "donation": "Donación",
-  "donationDescrip": "Todas las funciones de esta aplicación están disponibles sin necesidad de pago. Sin embargo, hacer apps y mantener sitios web tiene so coste, así que las donaciones me ayudan mucho. Si te gusta esta app, por favor deja una reseña en la Play Store o en la App Store y, si puedes, dona.",
-  "noticeContent": "¡Feliz día de San Valentín! ¡Espero que tu día esté lleno de amor en cualquier rincón de las galaxias! ¡Muchas gracias a @ItzHooverYT por crear cartas de San Valentín de NMS!",
+  "donationDescrip": "Detalles de la donación",
+  "noticeContent": "Contenido",
   "noticeAccept": "Aceptar",
   "buyMeACoffee": "Cómprame un cafe",
   "patreon": "Patreon",
@@ -341,7 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "Desbloquea los siguientes elementos con la unidad de anulación de fábrica",
   "assistantApps": "AssistantApps",
   "displaySeasonalBackground": "Usar fondo temático",
-  "japanese": "Japanese",
+  "japanese": "Japonés",
   "enabled": "Habilitado",
   "percentage": "{0}%",
   "lightYear": "{0} años luz",
@@ -355,8 +355,8 @@
   "norwegian": "Noruego",
   "nmsfm": "NMSFM",
   "steamNews": "Noticias de Steam",
-  "steamBranches": "Branches de Steam",
   "nmsfmSubtitle": "Música por Viajeros para Viajeros",
+  "steamBranches": "Branches de Steam",
   "nmsNews": "Noticias de No Man's Sky",
   "nmsNewsExplanation": "La primera página de noticias contiene artículos publicados en la página de Noticias de la web de No Man's Sky. Estos artículos son menos frecuentes que las Notas de Lanzamiento.\n\nLa página de Notas de Lanzamiento contiene las notas de parche que Hello Games escribe y publica en la página de Notas de Lanzamiento en la web de No Man's Sky. Estas Notas de Lanzamiento suelen ser específicas para cada plataforma.\n\nLa página de Branches de Steam contiene una lista con las distintas versiones de No Man's Sky en Steam. La versión Pública es la versión del juego que todo el mundo puede jugar. La versión Experimental contiene archivos de juego que solo pueden acceder las personas que se hayan apuntado a la beta de NMS. La versión Interna es exclusivamente para el personal de Hello Games. Cuando No Man's Sky recibe una actualización, suele llegar primero a la versión Interna, después a la Experimental y finalmente a la versión Pública.\n\nLa página de Noticias de Steam contiene las publicaciones que Hello Games ha publicado en la sección de Noticias de Steam, la cual suele ser actualizada con menos frecuencia que la página de Noticias en la página principal de No Man's Sky.",
   "tapToExpand": "Pulsa para expandir",
@@ -405,11 +405,15 @@
   "nmsThemed": "Temática de NMS",
   "defaultFont": "Fuente predeterminada",
   "settingsFont": "Fuente de configuraciones",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
+  "arabic": "Árabe",
+  "vietnamese": "Vietnamita",
   "urdu": "Urdu",
   "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "CE0AC623D43C38C3C7205336A8A66AA1"
+  "malaysian": "Malayo",
+  "tagalog": "Tagalo",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "244AC005589E89E9DF5545A4AE6A87F5"
 }
