--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -355,8 +355,8 @@
   "norwegian": "Norvég",
   "nmsfm": "NMSFM",
   "steamNews": "Steam hirek",
-  "steamBranches": "Steam Branches",
   "nmsfmSubtitle": "Zene az utazóknak az utazóktól",
+  "steamBranches": "Steam Branches",
   "nmsNews": "No man Sky hirek",
   "nmsNewsExplanation": "Az első Híroldal a No Man's Sky weboldalán közzétett cikkeket tartalmazza a Hírek oldalán, ezek a tételek ritkábban fordulnak elő, mint a Kiadási megjegyzések.  A Kiadási megjegyzések oldal tartalmazza azokat a javítási jegyzeteket, amelyeket a Hello Games ír és közzétesz a Senki Égének weboldalának Kiadási megjegyzések oldalán.  Ezek a Kiadási megjegyzések általában platformspecifikusak.  A Steam Branches oldal felsorolja azokat a különféle ágakat, amelyekkel a No Man's Sky rendelkezik a Steam szolgáltatással.  A Nyilvános fiók a játék változata, amelyet mindenki játszhat.  A kísérleti ág olyan játékfájlokat tartalmaz, amelyekhez csak azok az emberek férhetnek hozzá, akik regisztrálták magukat az NMS bétaverziójába, a belső ág pedig csak a Hello Games személyzetének szól.  Amikor a No Man's Sky frissítései érkeznek, általában a Belső, majd a Kísérleti és végül a Nyilvános fiókba költöznek.  A Steam News oldal tartalmazza a Hello Games által a Steam News részben közzétett bejegyzések gyűjteményét, amelyet általában ritkábban frissítenek, mint a No Man's Sky kezdőlapjának News oldalát.",
   "tapToExpand": "Érintsd meg a kinyitáshoz",
@@ -411,5 +411,9 @@
   "filipino": "Filipino",
   "malaysian": "Malaysian",
   "tagalog": "Tagalog",
-  "hashCode": "C9B1BCF1BA8573CDB3C307F5CE1FBECD"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "EAE9337EF10A8D43A97899F62C07C4E7"
 }
