--- a/src/assets/lang/language.id.json
+++ b/src/assets/lang/language.id.json
@@ -341,7 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "Buka kunci item berikut menggunakan Factory Override Unit ",
   "assistantApps": "AsistenAplikasi ",
   "displaySeasonalBackground": "Tampilkan Latar Belakang Musiman ",
-  "japanese": "Japanese",
+  "japanese": "Jepang",
   "enabled": "Diaktifkan ",
   "percentage": "{0}%",
   "lightYear": "{0} Tc",
@@ -355,8 +355,8 @@
   "norwegian": "Norwegia ",
   "nmsfm": "NMSFM",
   "steamNews": "Berita Steam",
-  "steamBranches": "Cabang Steam ",
   "nmsfmSubtitle": "Musik untuk penjelajah oleh penjelajah",
+  "steamBranches": "Cabang Steam ",
   "nmsNews": "Berita No Man's sky",
   "nmsNewsExplanation": "Halaman Berita pertama berisi artikel yang diposting di situs web No Man's Sky di halaman Berita mereka, item ini lebih jarang daripada Catatan Rilis. Halaman Catatan Rilis berisi catatan tempel yang ditulis dan diterbitkan oleh Hello Games ke halaman Catatan Rilis di situs web No Man's Sky. Catatan Rilis ini biasanya khusus untuk platform. Halaman Cabang Steam berisi daftar cabang berbeda yang dimiliki No Man's Sky di Steam. Cabang Publik adalah versi game yang dapat dimainkan semua orang. Cabang Eksperimental berisi file game yang hanya dapat diakses oleh orang yang telah mendaftar ke NMS beta dan cabang Internal hanya untuk staf Hello Games. Ketika pembaruan datang ke No Man's Sky, mereka biasanya dipindahkan ke Internal, lalu Eksperimental dan akhirnya ke cabang Publik. Halaman Steam News berisi kumpulan postingan yang dibuat Hello Games di bagian Steam News, biasanya lebih jarang diupdate daripada halaman News di beranda No Man's Sky ",
   "tapToExpand": "Ketuk untuk memperluas ",
@@ -405,11 +405,15 @@
   "nmsThemed": "bertema NMS ",
   "defaultFont": "Font Bawaan ",
   "settingsFont": "Font",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
-  "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "827711C413614EB8E9A3C81AEC57ED05"
+  "arabic": "Arab ",
+  "vietnamese": "Vietnam ",
+  "urdu": "Urdu ",
+  "filipino": "Filipina ",
+  "malaysian": "Malaysia ",
+  "tagalog": "Tagalog ",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "0CF8E1D3FF385ED8E579F125ACF00BEB"
 }
