--- a/src/assets/lang/language.no.json
+++ b/src/assets/lang/language.no.json
@@ -355,8 +355,8 @@
   "norwegian": "Norsk",
   "nmsfm": "NMSFM  fan radio ",
   "steamNews": "Steam Nyheter",
-  "steamBranches": "Steam Branches",
   "nmsfmSubtitle": "Musikk for reisende av reisende",
+  "steamBranches": "Steam Branches",
   "nmsNews": "No Man's Sky Nyheter",
   "nmsNewsExplanation": "Den første nyhetssiden inneholder artikler som er lagt ut på No Man's Sky-nettstedet på deres Nyhetsside. Disse artiklene er sjeldnere enn utgivelsesnotatene. Release Notes-siden inneholder patch-notatene som Hello Games skriver og publiserer til Release Notes-siden på No Man's Sky-nettstedet. Disse utgivelsesnotatene er vanligvis plattformsspesifikke. Steam Branches-siden inneholder en liste over de forskjellige grenene som No Man's Sky har på Steam. Den offentlige grenen er den versjonen av spillet som alle kan spille. Den eksperimentelle grenen inneholder spillfiler som bare personer som har registrert seg for NMS beta kan få tilgang, og den interne grenen er kun for Hello Games-ansatte. Når oppdateringer kommer til No Man's Sky, blir de vanligvis flyttet til Internal, deretter Experimental og til slutt til Public branch. Steam News-siden inneholder samlingen av innlegg som Hello Games har laget på Steam News-delen, vanligvis oppdatert sjeldnere enn News-siden på No Man's Sky-hjemmesiden",
   "tapToExpand": "Tapp for å maksimere/ utvide ",
@@ -411,5 +411,9 @@
   "filipino": "Filipino",
   "malaysian": "Malaysian",
   "tagalog": "Tagalog",
-  "hashCode": "2C53226DC7FDCB2A712897573187B408"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "E5E6511BF84F7593B0FAAD4EDA258E6B"
 }
