--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -25,7 +25,7 @@
   "seasonalExpeditionJson": "pl/SeasonalExpedition.lang",
   "journeyMilestoneJson": "pl/Milestones.lang",
   "title": "Wszystkie receptury",
-  "loading": "Ładuję",
+  "loading": "Ładowanie",
   "about": "O mnie",
   "aboutContent": "Dlaczego zadałem sobie trud, aby to stworzyć?\nPewnego razu, grając w No Man's Sky i chcąc zaplanować, jakie surowce do upraw są mi potrzebne w mojej bazie, uznałem, że łatwiej będzie ściągnąć aplikację ze sklepu Play czy App store niż odpalić Wiki na drugim monitorze.\nKiedy w końcu znalazłem odpowiednią, okazało się, że treść w niej zawarta jest płatna. Zirytowało mnie to na tyle, że postanowiłem stworzyć aplikację darmową i dostępną dla każdego. Była to zarazem doskonała okazja, aby pobawić się trochę we Flutterze.\n\nP.s. Prowadzę również bloga na Mind - by Kurt Lourens. Niestety nie mogę poświęcić tyle czasu ile bym chciał, ale coś tam piszę 😋.\n\nAplikacja ta nie jest powiązana w żadnym stopniu z firmą Hello Games, z marką No Man's Sky, żadną z jej filii czy firm powiązanych, których logotypy i grafiki pojawiają się w tej aplikacji.",
   "language": "Wsparcie językowe",
@@ -152,7 +152,7 @@
   "hungarian": "węgierski",
   "simplifiedChinese": "uproszczony chiński",
   "traditionalChinese": "tradycyjny chiński",
-  "communityMission": "misja dla społeczności",
+  "communityMission": "Misja dla społeczności",
   "communityMissionContent": "Kosmiczna anomalia zbiera informację z różnych rzeczywistości\n\nW trakcie przesyłania nowych danych, kampania żywego złota odblokuje nowe rzeczy do zebrania",
   "patched": "Naprawione",
   "general": "Ogólny",
@@ -165,7 +165,7 @@
   "error": "Błąd",
   "success": "sukces",
   "romanian": "rumuński",
-  "whatIsNew": "co nowego",
+  "whatIsNew": "Co nowego?",
   "newItem": "nowy",
   "somethingWentWrong": "coś poszło nie tak",
   "researchProgress": "postęp w badaniach",
@@ -355,8 +355,8 @@
   "norwegian": "norweski",
   "nmsfm": "NMSFM",
   "steamNews": "Aktualności Steam",
-  "steamBranches": "Gałęzie Steam",
   "nmsfmSubtitle": "Muzyka od podróżników dla podróżników",
+  "steamBranches": "Gałęzie Steam",
   "nmsNews": "Aktualności No Man’s Sky",
   "nmsNewsExplanation": "Pierwsza strona z wiadomościami zawiera artykuły opublikowane w witrynie No Man's Sky na ich stronie z informacjami o wydaniu, te pozycje są rzadsze niż uwagi do wydania.  Strona z informacjami o wydaniu zawiera informacje o łatkach, które Hello Games pisze i publikuje na stronie internetowej No Man's Sky.  Te informacje o wydaniu są zwykle specyficzne dla platformy.  Strona oddziałów Steam zawiera listę różnych gałęzi, które No Man's Sky ma na Steam.  Gałąź publiczna to wersja gry, w którą może grać każdy.  Gałąź eksperymentalna zawiera pliki gry, do których mają dostęp tylko osoby, które zapisały się do wersji beta NMS, a gałąź wewnętrzna jest przeznaczona tylko dla pracowników Hello Games.  Kiedy aktualizacje nadchodzą do No Man's Sky, zwykle są przenoszone do wewnętrznej, potem eksperymentalnej i wreszcie do gałęzi publicznej.  Strona Steam News zawiera zbiór postów, które Hello Games opublikowało w sekcji nowości Steam, zwykle aktualizowane rzadziej niż strona nowości na stronie głównej No Man's Sky.",
   "tapToExpand": "kliknij, by rozwinąć",
@@ -405,11 +405,15 @@
   "nmsThemed": "motyw NMS",
   "defaultFont": "Domyślna czcionka",
   "settingsFont": "Czcionka",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
-  "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "7E630FD5F0AE61349207E5962793659A"
+  "arabic": "arabski",
+  "vietnamese": "wietnamski",
+  "urdu": "urdu",
+  "filipino": "filipiński",
+  "malaysian": "malajski",
+  "tagalog": "tagalski",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "46FDB8AA72B542EB8CC02E40BC26F18A"
 }
