--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -355,8 +355,8 @@
   "norwegian": "Норвежский",
   "nmsfm": "Радио NMS",
   "steamNews": "Новости Steam",
-  "steamBranches": "Ветки Steam",
   "nmsfmSubtitle": "Музыка для странников от странников",
+  "steamBranches": "Ветки Steam",
   "nmsNews": "Новости No Man's Sky",
   "nmsNewsExplanation": "Первая страница новостей содержит статьи, размещенные на сайте No Man's Sky на их странице новостей, эти элементы встречаются реже, чем примечания к выпуску. Страница примечаний к выпуску содержит примечания к патчу, которые Hello Games пишет и публикует на странице примечаний к выпуску на веб-сайте No Man's Sky. Эти примечания к выпуску обычно зависят от платформы. Страница веток Steam содержит список различных веток, которые есть в No Man's Sky в Steam. Публичная ветка - это версия игры, в которую может играть каждый. Экспериментальная ветвь содержит файлы игры, к которым могут получить доступ только люди, которые подписались на бета-версию NMS, а внутренняя ветка предназначена только для сотрудников Hello Games. Когда обновления приходят в No Man's Sky, они обычно перемещаются во внутреннюю, затем экспериментальную и, наконец, в общедоступную ветку. Страница новостей Steam содержит коллекцию публикаций Hello Games в разделе новостей Steam, которые обычно обновляются реже, чем страница новостей на главной странице No Man's Sky.",
   "tapToExpand": "Просмотреть детали",
@@ -411,5 +411,9 @@
   "filipino": "Filipino",
   "malaysian": "Malaysian",
   "tagalog": "Tagalog",
-  "hashCode": "1C0212583F7C59681A3C5E3F9B77DFB5"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "BB540BF38CC7E3B69A4CD6C8B3B3AC6E"
 }
