--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -341,7 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "使用工厂超控单元解锁以下项目",
   "assistantApps": "助手应用",
   "displaySeasonalBackground": "关闭节日背景",
-  "japanese": "Japanese",
+  "japanese": "日文",
   "enabled": "已启用",
   "percentage": "百分之{0} ",
   "lightYear": "{0}光年",
@@ -355,8 +355,8 @@
   "norwegian": "挪威语",
   "nmsfm": "无人深空FM",
   "steamNews": "steam新闻",
-  "steamBranches": "STEAM分支",
   "nmsfmSubtitle": "旅行者为旅行者提供的音乐",
+  "steamBranches": "STEAM分支",
   "nmsNews": "无人深空新闻",
   "nmsNewsExplanation": "第一个新闻页面包含在 No Man's Sky 网站的新闻页面上发布的文章，这些条目的频率低于发行说明。 发行说明页面包含 Hello Games 编写并发布到《无人深空》网站上的发行说明页面的补丁说明。 这些发行说明通常是特定于平台的。 Steam 分支页面包含了无人深空在 Steam 上的不同分支列表。 公共分支是每个人都可以玩的游戏版本。 实验分支包含只有已注册 NMS 测试版的人才能访问的游戏文件，内部分支仅适用于 Hello Games 员工。 当更新来到无人深空时，它们通常会转移到内部，然后是实验，最后是公共分支。 Steam 新闻页面包含 Hello Games 在 Steam 新闻部分发布的帖子集合，更新频率通常低于无人深空主页上的新闻页面",
   "tapToExpand": "点击展开",
@@ -405,11 +405,15 @@
   "nmsThemed": "无人深空主题字体",
   "defaultFont": "默认字体",
   "settingsFont": "字体",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
-  "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "DFF829E9F0CF30D628F2F1C70942C8D7"
+  "arabic": "阿拉伯文",
+  "vietnamese": "越南语",
+  "urdu": "乌尔都语",
+  "filipino": "菲律宾语",
+  "malaysian": "马来西亚语",
+  "tagalog": "他加禄语",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "D364392FED7867584C7FAD6F836D2855"
 }
