--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -355,8 +355,8 @@
   "norwegian": "Norwegisch",
   "nmsfm": "NMSFM",
   "steamNews": "Steam Neuigkeiten",
-  "steamBranches": "Steam Neuigkeiten",
   "nmsfmSubtitle": "Music for Travelers by Travelers",
+  "steamBranches": "Steam Neuigkeiten",
   "nmsNews": "No Man's Sky Neuigkeiten",
   "nmsNewsExplanation": "Die erste Seite \"News\" enthält Artikel, die auf der No Man's Sky Website unter \"News\" veröffentlicht werden; diese Artikel sind seltener als die Versionshinweise. Die Seite Versionshinweise enthält die Patchnotizen, die Hello Games schreibt und auf der Seite Versionshinweise auf der No Man's Sky Website veröffentlicht. Diese Versionshinweise sind normalerweise plattformspezifisch. Die Seite Steam-Branches enthält eine Liste der verschiedenen Branches, die No Man's Sky auf Steam hat. Der öffentliche Branch ist die Version des Spiels, die jeder spielen kann. Der Experimental-Branch enthält Spieldateien, auf die nur Personen zugreifen können, die sich für die NMS-Beta angemeldet haben, und der interne Branch ist nur für Hello Games-Mitarbeiter. Wenn Updates für No Man's Sky kommen, werden sie normalerweise in den Internen, dann in den Experimentellen und schließlich in den Öffentlichen Branch verschoben. Die Steam-News-Seite enthält die Sammlung von Beiträgen, die Hello Games im Steam-News-Bereich veröffentlicht hat. Sie wird normalerweise weniger häufig aktualisiert als die News-Seite auf der No Man's Sky Website.\n\nÜbersetzt mit www.DeepL.com/Translator (kostenlose Version)",
   "tapToExpand": "Zum Aufklappen drücken",
@@ -405,11 +405,15 @@
   "nmsThemed": "NMS Schriftart",
   "defaultFont": "Standard Schriftart",
   "settingsFont": "Schriftart",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
+  "arabic": "Arabisch",
+  "vietnamese": "Vietnamesisch",
   "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
+  "filipino": "Philippinisch",
+  "malaysian": "Malaysisch",
   "tagalog": "Tagalog",
-  "hashCode": "A7039FE3E241A1996B56A86A97072224"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "33819AEA048363E366251C3EB1EE5A62"
 }
