--- a/src/assets/lang/language.en.json
+++ b/src/assets/lang/language.en.json
@@ -410,5 +410,9 @@
   "filipino": "Filipino",
   "malaysian": "Malaysian",
   "tagalog": "Tagalog",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "hashCode": "9B5685C0D787E05F8327FC50D2C70D8D"
 }
