--- a/src/assets/lang/language.ms.json
+++ b/src/assets/lang/language.ms.json
@@ -341,7 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "Buka kunci item berikut menggunakan Unit Override Kilang ",
   "assistantApps": "AssistantApps ",
   "displaySeasonalBackground": "Paparkan Latar Belakang Bermusim ",
-  "japanese": "Japanese",
+  "japanese": "Jepun ",
   "enabled": "Didayakan ",
   "percentage": "{0}% ",
   "lightYear": "{0} Tc",
@@ -355,8 +355,8 @@
   "norwegian": "bahasa Norway ",
   "nmsfm": "NMSFM",
   "steamNews": "Berita Steam ",
-  "steamBranches": "Cawangan Steam",
   "nmsfmSubtitle": "Muzik untuk Pengembara oleh Pengembara ",
+  "steamBranches": "Cawangan Steam",
   "nmsNews": "Berita No Man's Sky ",
   "nmsNewsExplanation": "Halaman Berita pertama mengandungi artikel yang disiarkan di laman web No Man's Sky pada halaman Berita mereka, item ini kurang kerap daripada Nota Keluaran. Halaman Nota Keluaran mengandungi nota tampalan yang ditulis dan diterbitkan oleh Hello Games ke halaman Nota Keluaran di tapak web No Man's Sky. Nota Keluaran ini biasanya khusus platform. Halaman Steam Branches mengandungi senarai cawangan berbeza yang No Man's Sky ada di Steam. Cawangan Awam ialah versi permainan yang boleh dimainkan oleh semua orang. Cawangan Eksperimen mengandungi fail permainan yang hanya orang yang telah mendaftar ke beta NMS boleh mengakses dan cawangan Dalaman adalah untuk kakitangan Hello Games sahaja. Apabila kemas kini datang ke No Man's Sky, mereka biasanya dipindahkan ke Dalaman, kemudian Eksperimen dan akhirnya ke cawangan Awam. Halaman Berita Steam mengandungi koleksi siaran yang Hello Games telah dibuat pada bahagian Berita Steam, biasanya dikemas kini kurang kerap daripada halaman Berita di halaman utama No Man's Sky ",
   "tapToExpand": "ketuk untuk mengembangkan ",
@@ -405,11 +405,15 @@
   "nmsThemed": "bertemakan NMS ",
   "defaultFont": "Fon Lalai ",
   "settingsFont": "fon ",
-  "arabic": "Arabic",
-  "vietnamese": "Vietnamese",
-  "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
-  "tagalog": "Tagalog",
-  "hashCode": "63F35D617BEF1DA04B413314050C9471"
+  "arabic": "arab ",
+  "vietnamese": "bahasa Vietnam ",
+  "urdu": "Urdu ",
+  "filipino": "Filipina ",
+  "malaysian": "Malaysia ",
+  "tagalog": "Tagalog ",
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "18366115A0C6EC75B1DCBDA0C48D714C"
 }
