--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -355,8 +355,8 @@
   "norwegian": "Norueguês",
   "nmsfm": "NMS FM",
   "steamNews": "Notícias da Steam",
-  "steamBranches": "Ramos da Steam",
   "nmsfmSubtitle": "Música para Viajantes, por Viajantes",
+  "steamBranches": "Ramos da Steam",
   "nmsNews": "Notícias de No Man's Sky",
   "nmsNewsExplanation": "A primeira Página de Notícias contém artigos publicados na página de notícias do site do No Man's Sky. Esses itens são menos frequentes do que as notas de lançamento. A página Notas de Versão contém as notas de patch que a Hello Games grava e publica na página Notas de Versão no site No Man's Sky. Essas notas de versão geralmente são específicas da plataforma. A página Steam Branches contém uma lista dos diferentes branches que No Man's Sky possui na Steam. O Branch Público é a versão do jogo que todos podem jogar. A Ramificação Experimental contém arquivos de jogos que apenas as pessoas que se inscreveram no beta do NMS podem acessar, e a Ramificação Interna é apenas para a equipe do Hello Games. Quando as atualizações chegam ao No Man's Sky, elas geralmente são movidas para Interno, Experimental e, finalmente, para o ramal Público. A página Steam News está a coleção de posts que a Hello Games fez na seção Steam News, geralmente atualizada com menos frequência do que a página News na página inicial do No Man's Sky",
   "tapToExpand": "Toque para Expandir",
@@ -411,5 +411,9 @@
   "filipino": "Filipino",
   "malaysian": "Malaysian",
   "tagalog": "Tagalog",
-  "hashCode": "E0C28190E93A39AD246F54A7954C0C64"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "317074D005391157CE16466C1F91EF67"
 }
