--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -341,7 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "Fabrika Geçersiz Kılma Ünitesini kullanarak bu öğelere erişim açın",
   "assistantApps": "AssistantApps",
   "displaySeasonalBackground": "Sezonsal Arkaplan",
-  "japanese": "Japanese",
+  "japanese": "Japonca",
   "enabled": "Etkin",
   "percentage": "% {0}",
   "lightYear": "{0} ışık yılı",
@@ -355,8 +355,8 @@
   "norwegian": "Norveççe",
   "nmsfm": "NMSFM",
   "steamNews": "Steam Haberleri",
-  "steamBranches": "Steam Dalları",
   "nmsfmSubtitle": "Yolcular için Yolcular'dan Müzikler",
+  "steamBranches": "Steam Dalları",
   "nmsNews": "No Man's Sky Haberleri",
   "nmsNewsExplanation": "İlk Haberler sayfası, No Man's Sky web sitesinde Haber sayfalarında yayınlanan makaleleri içerir, bu öğeler Sürüm Notlarından daha az sıklıkta görülür. Sürüm Notları sayfası, Hello Games'in No Man's Sky web sitesindeki Sürüm Notları sayfasına yazdığı ve yayınladığı yama notlarını içerir. Bu Sürüm Notları genellikle platforma özeldir. Steam Dalları sayfası, No Man's Sky'ın Steam'deki farklı dallarının bir listesini içerir. Public Branch oyunun herkesin oynayabileceği versiyonudur. Experimental Branch, yalnızca NMS beta sürümüne kaydolmuş kişilerin erişebileceği oyun dosyaları ve Internal Branch sadece Hello Games çalışanları içindir. Güncellemeler No Man's Sky'a geldiğinde, genellikle ilk Internal, ardından Experimental ve son olarak Public Branch'a taşınırlar. Steam Haberleri sayfası, Hello Games'in Steam Haberleri bölümünde yaptığı ve genellikle No Man's Sky ana sayfasındaki Haberler sayfasından daha az sıklıkta güncellenen gönderilerin bir koleksiyonunu içerir.",
   "tapToExpand": "Büyütmek için dokunun",
@@ -411,5 +411,9 @@
   "filipino": "Filipince",
   "malaysian": "Malayca",
   "tagalog": "Tagalogca",
-  "hashCode": "5198039184172C274E970AA6E5D12D8F"
+  "futureCommunityMission": "Future",
+  "inProgressCommunityMission": "In progress",
+  "completedCommunityMission": "Completed",
+  "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "hashCode": "40EE037C6D2BB97195C6C59D853CBA56"
 }
